--- a/CodeFront/codeFidelizame/package.json
+++ b/CodeFront/codeFidelizame/package.json
@@ -25,6 +25,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.1",
     "react-slick": "^0.30.2",
+    "react-toastify": "^10.0.5",
     "redux-thunk": "^3.1.0",
     "slick-carousel": "^1.8.1",
     "sweetalert2": "^11.12.2",
