--- a/CodeFront/codeFidelizame/package.json
+++ b/CodeFront/codeFidelizame/package.json
@@ -17,7 +17,10 @@
     "@heroicons/react": "^2.1.4",
     "@reduxjs/toolkit": "^2.2.6",
     "axios": "^1.7.2",
+    "cloudinary-react": "^1.8.1",
     "framer-motion": "^11.3.31",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.2",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
