--- a/CodeBack/package.json
+++ b/CodeBack/package.json
@@ -19,14 +19,14 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
-    "jsonwebtoken": "^9.0.2",
     "express-session": "^1.18.0",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
+    "nodemon": "^3.1.7",
     "pg": "^8.13.0",
     "postgres": "^3.4.4",
-    "sequelize": "^6.37.3",
-    "nodemon": "^3.1.7"
+    "sequelize": "^6.37.3"
   }
 }
