--- a/CodeBack/package.json
+++ b/CodeBack/package.json
@@ -24,6 +24,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
+    "nodemailer": "^6.9.15",
     "nodemon": "^3.1.7",
     "pg": "^8.13.0",
     "postgres": "^3.4.4",
