--- a/CodeFront/codeFidelizame/package.json
+++ b/CodeFront/codeFidelizame/package.json
@@ -20,6 +20,7 @@
     "cloudinary-react": "^1.8.1",
     "framer-motion": "^11.3.31",
     "html2canvas": "^1.4.1",
+    "html2pdf.js": "^0.10.2",
     "jspdf": "^2.5.2",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
